Fixed spacing

--- a/CSS&Assets/main.css
+++ b/CSS&Assets/main.css
@@ -11,11 +11,8 @@ body{
 }
 
 #item1{
-    padding-left: 260px
-}
-
-#item1-inner{
-    margin-left: 160px
+    padding-left: 260px;
+    max-width: 90%;
 }
 
 .footer {
@@ -86,7 +83,7 @@ body{
 #about-inner{
     height: 300px;
     padding-left: 250px;
-    width: 80%;
+    max-width: 80%;
 }
 
 #about-inner p{
@@ -261,12 +258,13 @@ section#contact h1{
     }
 
     #about-inner{
-        padding-left: 10px;
+        padding-left: 80px;
+        max-width: 90%;
     }
 
     section.module.content {
         padding-bottom: 20px;
-        height: 240px;
+        height: 340px;
     }
 
     #about-img{
@@ -280,7 +278,7 @@ section#contact h1{
     }
 
     #item1{
-        padding-left: 70px;
+        padding-left: 120px;
     }
 
     section#contact > h1{
@@ -318,7 +316,7 @@ section#contact h1{
 }
 
 /* iPad Landscape */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+@media only screen and (max-device-width: 768px){
     #list{
         padding-left: 50px;
     }
@@ -334,7 +332,8 @@ section#contact h1{
     }
 
     #item1{
-        padding-left: 15px;
+        padding-left: 55px;
+        max-width: 100%;
     }
 
     section.module h2{
